--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -10,50 +10,60 @@
     box-sizing: border-box;
 }
 
-body {
-    background-image: url(../img/background.jpeg);
-    background-repeat: no-repeat;
-}
-
 .main {
     max-width: 60rem;
     margin: 0 auto;
 }
 
+.main section {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
 header {
     background-image: url(../img/companylogoBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 200px;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 85px;
+    width: 100%;
 }
 
-h1 {
+header a {
+    display: flex;
+    width: 100%;
     font-size: 2rem;
-}
+    color: #fff;
+    text-align: center;
 
+}
 
 nav {
     background: #707070;
-    border: 1px solid white;
+    border: 4px solid white;
     height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-ul {
-    display: flex;
+nav ul {
+    display: none;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     margin: 0 10px;
     max-width: 500px;
+}
 
+nav a {
+    color: #fff;
+    font-size: 1.25rem;
+    text-transform: uppercase;
 }
 
 footer {
@@ -62,8 +72,200 @@ footer {
     justify-content: center;
     align-items: center;
     height: 60px;
+    font-size: .8 rem;
 }
 
 footer p {
     color: #fff;
+}
+
+article {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    background: #2699FB;
+    text-transform: uppercase;
+}
+
+article h2 {
+    color: #fff;
+    font-size: 1.5rem;
+    max-width: 220px;
+}
+
+/* h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    
+    flex: 100%;
+    text-align: center;
+    vertical-align: center;
+    align-self: center;
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: #fff;
+    text-transform: uppercase;
+} */
+
+article:not(:first-of-type) {
+    display: none;
+}
+
+/* Index page */
+/* ########## */
+
+figure {
+    height: 200px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    border: 3px solid #fff;
+}
+
+.index figure:nth-of-type(1) {
+    background-image: url(../img/small/product3.jpg);
+}
+
+.index figure:nth-of-type(2) {
+    background-image: url(../img/small/product8.jpg);
+}
+
+.index figure:nth-of-type(3) {
+    background-image: url(../img/small/product6.jpg);
+}
+
+.index figure:nth-of-type(4) {
+    background-image: url(../img/small/product9.jpg)
+}
+
+/* Media Querries */
+/* ############## */
+
+/* Tablet */
+@media screen and (min-width: 361px) {
+    header {
+        height: 200px;
+    }
+    header a {
+        font-size: 2.5rem;
+        text-shadow: #000 2px 0px 0px, #000 1.75517px 0.958851px 0px, #000 1.0806px 1.68294px 0px, #000 0.141474px 1.99499px 0px, #000 -0.832294px 1.81859px 0px, #000 -1.60229px 1.19694px 0px, #000 -1.97998px 0.28224px 0px, #000 -1.87291px -0.701566px 0px, #000 -1.30729px -1.5136px 0px, #000 -0.421592px -1.95506px 0px, #000 0.567324px -1.91785px 0px, #000 1.41734px -1.41108px 0px, #000 1.92034px -0.558831px 0px;
+    }
+    nav {
+        border: 2px solid #fff;
+    }
+    nav ul {
+        display: flex;
+    }
+
+    article:not(:first-of-type) {
+        display: none;
+    }
+
+    article {
+        height: 10rem;
+    }
+
+    article h2 {
+        max-width: 376px;
+        font-size: 2.75rem;
+    }
+
+    /* article:nth-of-type(n) {
+        display: flex;
+        flex: 100%;
+        max-width: 100%;
+        font-size: 2.75rem;
+
+    } */
+
+    article:nth-of-type(4) {
+        display: flex;
+    }
+
+    figure {
+        height: 16rem;
+        border: none;
+    }
+
+    figure:nth-of-type(3) {
+        display: none;
+    }
+
+    figure:nth-of-type(-n+2) {
+        flex: 50%;
+        max-width: 50%;
+        border: 3px solid #fff;
+    }
+
+    footer {
+        font-size: 1.25rem;
+    }
+
+}
+
+@media screen and (min-width: 961px) {
+    body {
+        background-image: url(../img/background.jpeg);
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+
+    header a {
+        font-size: 6rem;
+        text-shadow: #000 3px 0px 0px,
+        #000 2.83487px 0.981584px 0px,
+        #000 2.35766px 1.85511px 0px,
+        #000 1.62091px 2.52441px 0px,
+        #000 0.705713px 2.91581px 0px,
+        #000 -0.287171px 2.98622px 0px,
+        #000 -1.24844px 2.72789px 0px,
+        #000 -2.07227px 2.16926px 0px,
+        #000 -2.66798px 1.37182px 0px,
+        #000 -2.96998px 0.42336px 0px,
+        #000 -2.94502px -0.571704px 0px,
+        #000 -2.59586px -1.50383px 0px,
+        #000 -1.96093px -2.27041px 0px,
+        #000 -1.11013px -2.78704px 0px,
+        #000 -0.137119px -2.99686px 0px,
+        #000 0.850987px -2.87677px 0px,
+        #000 1.74541px -2.43999px 0px,
+        #000 2.44769px -1.73459px 0px,
+        #000 2.88051px -0.838247px 0px;
+    }
+    nav {
+        border: 1px solid #fff;
+    }
+    nav a {
+        font-size: 1.5rem;
+    }
+    figure:nth-of-type(n) {
+        display: flex;
+        flex: 100%;
+        max-width: 100%;
+        height: 400px;
+        border: none;
+    }
+    article:nth-of-type(n) {
+        display: flex;
+    }
+    article {
+        height: 14rem;
+    }
+
+    article h2 {
+        font-size: 4.5rem;
+        max-width: 605px;
+    }
+
+    article:not(:first-of-type) h2 {
+        max-width: 500px;
+    }
+
+    footer {
+        font-size: 1.75rem;
+    }
 }
