--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -216,6 +216,77 @@ figure {
     background-image: url(../img/small/product9.jpg)
 }
 
+/* Products page */
+/* ############# */
+
+.banner {
+    height: 48px;
+}
+
+.banner h2 {
+    max-width: 100%;
+}
+
+.banner h2:nth-of-type(2) {
+    display: none
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-bottom: 14px;
+}
+
+.gallery a {
+    flex: 100%;
+    max-width: 100%;
+    height: 200px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    border: 14px solid #fff;
+    border-bottom: 0px solid #fff;
+
+}
+
+.gallery a:nth-of-type(1) {
+    background-image: url(../img/small/product1.jpg);
+}
+.gallery a:nth-of-type(2) {
+    background-image: url(../img/small/product2.jpg);
+}
+.gallery a:nth-of-type(3) {
+    background-image: url(../img/small/product3.jpg);
+}
+.gallery a:nth-of-type(4) {
+    background-image: url(../img/small/product4.jpg);
+}
+.gallery a:nth-of-type(5) {
+    background-image: url(../img/small/product5.jpg);
+}
+.gallery a:nth-of-type(6) {
+    background-image: url(../img/small/product6.jpg);
+}
+.gallery a:nth-of-type(7) {
+    background-image: url(../img/small/product7.jpg);
+}
+.gallery a:nth-of-type(8) {
+    background-image: url(../img/small/product8.jpg);
+}
+.gallery a:nth-of-type(9) {
+    background-image: url(../img/small/product9.jpg);
+}
+.gallery a:nth-of-type(10) {
+    background-image: url(../img/small/product10.jpg);
+}
+.gallery a:nth-of-type(11) {
+    background-image: url(../img/small/product11.jpg);
+}
+.gallery a:nth-of-type(12) {
+    background-image: url(../img/small/product12.jpg);
+}
+
 /* Media Querries */
 /* ############## */
 
@@ -280,6 +351,20 @@ figure {
         font-size: 1.25rem;
     }
 
+    .banner {
+        display: none;
+    }
+
+    .gallery {
+        margin: 0 7px 14px 7px;
+    }
+
+    .gallery a {
+        flex: 50%;
+        max-width: 50%;
+        border-right: 7px solid #fff;
+        border-left: 7px solid #fff;
+    }
 }
 
 /* Additional breakpoint to smooth things out */
@@ -299,6 +384,10 @@ figure {
 
     header a {
         font-size: 5.25rem;
+    }
+
+    .gallery a {
+        height: 290px;
     }
 }
 
@@ -357,5 +446,36 @@ figure {
 
     footer {
         font-size: 1.75rem;
+    }
+
+    .banner {
+        display: flex;
+        height: 120px;
+    }
+
+    .banner h2:nth-of-type(1) {
+        display: none;
+    }
+
+    .banner h2:nth-of-type(2) {
+        display: block;
+    }
+
+    .gallery {
+        margin: 0 0 14px 0;
+    }
+
+    .gallery a {
+        height: 200px;
+        flex: calc(100% / 3);
+        max-width: calc(100% / 3);
+    }
+
+    .gallery a:nth-of-type(3n-2) {
+        border-left: 14px solid #fff;
+    }
+
+    .gallery a:nth-of-type(3n) {
+        border-right: 14px solid #fff;
     }
 }
