--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -56,6 +56,9 @@ nav {
     border: 4px solid white;
     min-height: 60px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .nav-list {
@@ -304,9 +307,15 @@ figure {
         justify-content: center;
         align-items: center;
     }
+
+    .nav-list a {
+        height: 100%;
+        line-height: 1.75rem;
+    }
+
     .nav-list {
         display: flex;
-        padding: 0px 10px;
+        padding: 0 1rem;
         
         flex-direction: row;
     }
