--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -116,6 +116,7 @@ input[type=checkbox] {
     width: 45px;
     height: 50px;
     position: absolute;
+    border: none;
   }
   
   #hamburger span {
