--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -341,6 +341,7 @@ select {
     overflow: hidden;
     border: 2px solid #707070;
     color: #707070;
+    border-radius: 0;
 }
 
 input[type=text], input[type=email], textarea {
